# py-wwpdb_utils_db

./: .gitignore  .gitmodules  README.md  azure-pipelines.yml  azure-template-publish-job.yml  azure-template-tox-job.yml  pylintrc  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/: BirdLoaderTests.py  ChemCompLoaderTests.py  DBLoadUtilImportTest.py  DbLoadingApiTest.py  FileActivityDbTests.py  FileActivityUtilTests.py  MiscSchemaTests.py  MyDbSqlGenTests.py  MyDbUtilTests.py  MyQueryDirectivesTests.py  PdbDistroSchemaReportTests.py  PdbxSchemaMapReaderTests.py  SchemaDefLoaderDbTests.py  SchemaDefLoaderTests.py  StatusHistoryLoaderTests.py  StatusHistoryTests.py  StatusLoadWrapperTests.py  WorkflowSchemaReportTests.py  mock_import.py
tests/data/schema-map/: schema_map_pdbx_cc.cif  schema_map_pdbx_prd_v5.cif  status_rcsb_schema_da.cif
wwpdb/utils/db/: AdvancedWriter.py  BirdSchemaDef.py  ChemCompSchemaDef.py  DBLoadUtil.py  DaInternalSchemaDef.py  DbLoadingApi.py  DepositorSyncUtil.py  FileActivityDb.py  FileActivityDbCore.py  FileActivityUtil.py  FileMetadataParser.py  MessageSchemaDef.py  MyConnectionBase.py  MyDbAdapter.py  MyDbSqlGen.py  MyDbUtil.py  MyQueryDirectives.py  MysqlSchemaImporter.py  PdbDistroSchemaDef.py  PdbxSchemaDef.py  PdbxSchemaMapReader.py  PrdChemCompSchemaDef.py  SchemaDefBase.py  SchemaDefLoader.py  SqlLoader.py  StatusHistory.py  StatusHistoryExec.py  StatusHistorySchemaDef.py  StatusHistoryUtils.py  StatusLoadWrapper.py  WorkflowSchemaDef.py  __init__.py
wwpdb/utils/tests-db/: BirdLoaderTests.py  ChemCompLoaderTests.py  DBLoadUtilImportTest.py  DbLoadingApiTest.py  FileActivityDbTests.py  FileActivityUtilTests.py  MiscSchemaTests.py  MyDbSqlGenTests.py  MyDbUtilTests.py  MyQueryDirectivesTests.py  PdbDistroSchemaReportTests.py  PdbxSchemaMapReaderTests.py  SchemaDefLoaderDbTests.py  SchemaDefLoaderTests.py  StatusHistoryLoaderTests.py  StatusHistoryTests.py  StatusLoadWrapperTests.py  WorkflowSchemaReportTests.py  mock_import.py
wwpdb/utils/tests-db/data/schema-map/: schema_map_pdbx_cc.cif  schema_map_pdbx_prd_v5.cif  schema_map_pdbx_prdcc.cif  schema_map_pdbx_v40.cif
wwpdb/utils/tests-db_mysql/: BirdLoaderTests.py  ChemCompLoaderTests.py  MyDbUtilTests.py  MyQueryDirectivesTests.py  SchemaDefLoaderDbTests.py  StatusHistoryLoaderTests.py
